// $Id$

CHANGELOG for Media module.
===========================

by aaron: Add hacks so that Media: YouTube can work.
by aaron: Attach subtab behaviors.
by aaron: Temporarily hardcode load media youtube js in browser.
by aaron: Integrate browser w/ optional Styles module.
by aaron: Add get_parameters to remote stream wrapper.
by aaron: Allow saving existing streams.
by aaron: Implement ->url_stat() for filesize().
by aaron: Save remote streams.
by aaron: Get MediaReadOnlyStreamWrapper in line with Drupal stream wrappers.
by aaron: Add MediaReadOnlyStreamWrapper.
by aaron: Add media_browser_thumbnails form element.
by aaron: theme_media_browser_thumbnail_radios.
by aaron: Coder review of concatenated spaces.
by aaron: Parameters to hook_form_alter have changed.
by aaron: Wrap js with (function($) {})(jQuery); for library compatibility.
by aaron: Add settings to each js behavior.
by aaron: Convert js behavior selection to once().
by aaron: Add attach methods to js behaviors.
by aaron: Attach css & js to form using #attached element.
by aaron: Convert class #attributes to arrays.
by aaron: Fix php notices for $registration['callbacks']['resource'].
by aaron: Update parameters to theme('image') call for d7.
by aaron: Update parameters to theme('item_list') calls for d7.
by aaron: Set static cache in media_get_fields() and fix notices for isset.
by aaron: In media_get_registered_modules() fix notices for isset.
by aaron: In media_active_fields_for_node_type() grab field info for d7.
by aaron: Use file_get_field_list() to get a listing of node type's filefields.
by aaron: $type is an object.
by aaron: Move menu settings to media config.
by aaron: Begin to fix content type settings page.
by jmstacey: Drupal 7 compatability.
  * Update .info files.
  * Added necessary files to new registry.
  * Removed 'file' keys from hook_menu().
  * Global media settings page fixed.
by jmstacey: Code styling cleanup.
by jmstacey: Untested rough sync up with D6 branch.